[package]
name = "chan-desktop"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Desktop edition of the chan markdown editor."
license.workspace = true
repository.workspace = true
homepage = "https://chan.app"
readme = "../README.md"
keywords = ["markdown", "editor", "tauri", "notes", "chan"]
categories = ["text-editors", "gui"]
publish = false

[[bin]]
name = "chan-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { workspace = true, features = [] }

[dependencies]
tauri = { workspace = true, features = ["devtools"] }
tauri-plugin-deep-link = { workspace = true }
tauri-plugin-dialog = { workspace = true }
tauri-plugin-opener = { workspace = true }
tauri-plugin-process = { workspace = true }
tauri-plugin-updater = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
chan-workspace = { workspace = true, default-features = false }
chan-server = { workspace = true, features = ["embeddings"] }
# The `cs` control-socket client, so chan-desktop dispatches `cs` when
# invoked through a `cs` name (argv[0]) without a `chan` binary on PATH.
# The workspace dep is `default-features = false` (chan-server pulls it
# wire-only), so chan-desktop must opt INTO `client` explicitly to get the
# clap surface + transport. Cargo unifies to one build with `client` on.
chan-shell = { workspace = true, features = ["client"] }
notify = { workspace = true }
notify-debouncer-mini = { workspace = true }
keyring = { workspace = true }
getrandom = { workspace = true }
gethostname = { workspace = true }
reqwest = { workspace = true }

# Embed chan-tunnel-server so a remote `chan serve --tunnel-url`
# registers as a workspace in the desktop Workspaces window.
chan-tunnel-server = { workspace = true }
chan-tunnel-proto = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
http = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "net", "sync", "time", "process"] }
tokio-util = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }
semver = { workspace = true }
rust-embed = "8"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", default-features = false, features = ["std", "NSApplication", "NSEvent", "NSGraphics", "NSGraphicsContext", "NSResponder", "NSView", "NSWindow"] }
objc2-foundation = { version = "0.3", default-features = false, features = ["std", "NSData", "NSGeometry", "NSString", "objc2-core-foundation"] }
# Vector PDF export from the desktop shell. `win.print()` is a no-op
# in WKWebView, so chan-desktop captures the themed print HTML through
# WKWebView's native `createPDF` instead (see src/pdf.rs). block2
# bridges the async completion handler; objc2-core-foundation pumps the
# main run loop while the capture is in flight.
objc2-web-kit = { version = "0.3", default-features = false, features = ["std", "WKWebView", "WKWebViewConfiguration", "WKPDFConfiguration", "WKNavigation", "block2", "objc2-app-kit"] }
objc2-core-foundation = { version = "0.3", default-features = false, features = ["std", "CFRunLoop", "CFDate"] }
block2 = "0.6"

[dev-dependencies]
chan-tunnel-client = { workspace = true }
tempfile = { workspace = true }
