[package]
name = "chan-desktop"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Desktop edition of the chan markdown editor."
license.workspace = true
repository.workspace = true
homepage = "https://chan.app"
readme = "../README.md"
keywords = ["markdown", "editor", "tauri", "notes", "chan"]
categories = ["text-editors", "gui"]
publish = false

[[bin]]
name = "chan-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { workspace = true, features = [] }

[dependencies]
tauri = { workspace = true, features = ["devtools"] }
tauri-plugin-deep-link = { workspace = true }
tauri-plugin-dialog = { workspace = true }
tauri-plugin-opener = { workspace = true }
tauri-plugin-process = { workspace = true }
tauri-plugin-updater = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
# Native clipboard read for the terminal's right-click "Paste" (read_clipboard_text),
# bypassing WKWebView's DOM-paste "Paste" button.
arboard = { workspace = true }
chan-workspace = { workspace = true, default-features = false }
chan-server = { workspace = true, features = ["embeddings"] }
# The `cs` control-socket client, so chan-desktop dispatches `cs` when
# invoked through a `cs` name (argv[0]) without a `chan` binary on PATH.
# The workspace dep is `default-features = false` (chan-server pulls it
# wire-only), so chan-desktop must opt INTO `client` explicitly to get the
# clap surface + transport. Cargo unifies to one build with `client` on.
chan-shell = { workspace = true, features = ["client"] }
notify = { workspace = true }
notify-debouncer-mini = { workspace = true }
keyring = { workspace = true }
getrandom = { workspace = true }
gethostname = { workspace = true }
reqwest = { workspace = true }

# Embed chan-tunnel-server so a remote `chan serve --tunnel-url`
# registers as a workspace in the desktop Workspaces window.
chan-tunnel-server = { workspace = true }
chan-tunnel-proto = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
http = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "net", "sync", "time", "process"] }
tokio-util = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }
semver = { workspace = true }
rust-embed = "8"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
# `NSPrintInfo` + `NSPrintOperation` drive the silent save-to-PDF print
# job (see src/pdf.rs). The other features cover the offscreen NSWindow the
# webview is parented in for layout. `NSPasteboard` backs the drag-
# pasteboard read in src/dropped_paths.rs.
objc2-app-kit = { version = "0.3", default-features = false, features = ["std", "NSApplication", "NSEvent", "NSGraphics", "NSGraphicsContext", "NSPasteboard", "NSResponder", "NSView", "NSWindow", "NSPrintInfo", "NSPrintOperation"] }
# `NSURL` builds the destination file URL and `NSDictionary` inserts it
# into the print info's attributes dictionary under `NSPrintJobSavingURL`.
# `NSArray` carries the drag pasteboard's filename property list.
objc2-foundation = { version = "0.3", default-features = false, features = ["std", "NSArray", "NSData", "NSDictionary", "NSGeometry", "NSObject", "NSString", "NSURL", "objc2-core-foundation"] }
# Paginating PDF export from the desktop shell. `win.print()` is a no-op
# in WKWebView, so chan-desktop renders the themed print HTML through
# WKWebView's native print pipeline (`printOperationWithPrintInfo:`, see
# src/pdf.rs), which honors `@page`, CSS auto-pagination, and page breaks.
# The `objc2-app-kit` feature exposes that method and the NSPrint* types;
# objc2-core-foundation pumps the main run loop while the page loads.
objc2-web-kit = { version = "0.3", default-features = false, features = ["std", "WKWebView", "WKWebViewConfiguration", "WKNavigation", "objc2-app-kit"] }
objc2-core-foundation = { version = "0.3", default-features = false, features = ["std", "CFRunLoop", "CFDate"] }

[dev-dependencies]
chan-tunnel-client = { workspace = true }
tempfile = { workspace = true }
