[package]
name = "chan-desktop"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Desktop edition of the chan markdown editor."
license.workspace = true
repository.workspace = true
homepage = "https://chan.app"
readme = "../README.md"
keywords = ["markdown", "editor", "tauri", "notes", "chan"]
categories = ["text-editors", "gui"]
publish = false

[[bin]]
name = "chan-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { workspace = true, features = [] }

[dependencies]
tauri = { workspace = true, features = ["devtools"] }
tauri-plugin-deep-link = { workspace = true }
tauri-plugin-dialog = { workspace = true }
tauri-plugin-opener = { workspace = true }
tauri-plugin-updater = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
# Native clipboard for the terminal's right-click "Paste" (read_clipboard_text)
# and the `cs copy` / `cs paste` bridge, bypassing WKWebView's DOM-paste "Paste"
# button. `image-data` adds get_image/set_image (RGBA) for the image clipboard.
arboard = { workspace = true, features = ["image-data"] }
# PNG codec for the image clipboard: decode the PNG the SPA sends into arboard's
# RGBA ImageData on `cs copy`, and encode arboard's RGBA back to PNG on `cs paste`.
image = { workspace = true, features = ["png"] }
# The whole `chan` CLI as a library: chan-desktop dispatches `chan`
# in-process (`chan::run(.., Personality::Desktop)`) when invoked through a
# `~/.local/bin/chan` shim, so a desktop install also gives you `chan`
# without a separate download.
chan = { workspace = true }
chan-workspace = { workspace = true, default-features = false }
chan-server = { workspace = true, features = ["embeddings"] }
# The `cs` control-socket client, so chan-desktop dispatches `cs` when
# invoked through a `cs` name (argv[0]) without a `chan` binary on PATH.
# The workspace dep is `default-features = false` (chan-server pulls it
# wire-only), so chan-desktop must opt INTO `client` explicitly to get the
# clap surface + transport. Cargo unifies to one build with `client` on.
chan-shell = { workspace = true, features = ["client"] }
notify = { workspace = true }
notify-debouncer-mini = { workspace = true }
keyring = { workspace = true }
getrandom = { workspace = true }
gethostname = { workspace = true }
reqwest = { workspace = true }

# The launcher's local workspace runtime serves the embedded SPA + API
# over a loopback axum router (see src/embedded.rs).
axum = { workspace = true }
# StreamExt for the devserver window feed's WS stream (tokio-tungstenite).
futures = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "net", "sync", "time", "process"] }
tokio-tungstenite = { workspace = true }
tokio-util = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }
semver = { workspace = true }

[target.'cfg(windows)'.dependencies]
# Raw Win32 FFI, no higher-level wrapper needed:
# - WindowsAndMessaging: broadcast WM_SETTINGCHANGE after the per-user PATH
#   write (cs_install.rs) so freshly-spawned shells pick up the chan bin dir
#   without a logout.
# - Console + Storage_FileSystem + Security: a release chan-desktop.exe is GUI
#   subsystem (no console), so when it is invoked through a `chan`/`cs` shim and
#   runs as a CLI it must AttachConsole(ATTACH_PARENT_PROCESS) and bind the std
#   handles to CONOUT$/CONIN$, or every println! is discarded (see main.rs
#   `attach_parent_console_for_cli`). CreateFileW pulls in Security for the
#   SECURITY_ATTRIBUTES type in its signature even though we pass null.
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_System_Console", "Win32_Storage_FileSystem", "Win32_Security"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
# `NSPrintInfo` + `NSPrintOperation` drive the silent save-to-PDF print
# job (see src/pdf.rs). The other features cover the offscreen NSWindow the
# webview is parented in for layout. `NSPasteboard` backs the drag-
# pasteboard read in src/dropped_paths.rs. `NSAlert` + `NSButton` back the
# native Return-to-default confirm dialogs in src/native_dialog.rs.
objc2-app-kit = { version = "0.3", default-features = false, features = ["std", "NSAlert", "NSApplication", "NSButton", "NSEvent", "NSGraphics", "NSGraphicsContext", "NSPasteboard", "NSResponder", "NSView", "NSWindow", "NSPrintInfo", "NSPrintOperation"] }
# `NSURL` builds the destination file URL and `NSDictionary` inserts it
# into the print info's attributes dictionary under `NSPrintJobSavingURL`.
# `NSArray` carries the drag pasteboard's filename property list.
objc2-foundation = { version = "0.3", default-features = false, features = ["std", "NSArray", "NSData", "NSDictionary", "NSGeometry", "NSObject", "NSString", "NSURL", "objc2-core-foundation"] }
# Paginating PDF export from the desktop shell. `win.print()` is a no-op
# in WKWebView, so chan-desktop renders the themed print HTML through
# WKWebView's native print pipeline (`printOperationWithPrintInfo:`, see
# src/pdf.rs), which honors `@page`, CSS auto-pagination, and page breaks.
# The `objc2-app-kit` feature exposes that method and the NSPrint* types;
# objc2-core-foundation pumps the main run loop while the page loads.
objc2-web-kit = { version = "0.3", default-features = false, features = ["std", "WKWebView", "WKWebViewConfiguration", "WKNavigation", "objc2-app-kit"] }
objc2-core-foundation = { version = "0.3", default-features = false, features = ["std", "CFRunLoop", "CFDate"] }

[dev-dependencies]
tempfile = { workspace = true }
