[package]
name = "devserver-control"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Authoritative in-memory control plane for chan gateway proxy nodes."
publish = false

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
devserver-control-proto = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
