[package]
name = "workspace-proxy"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "workspace.chan.app: lists the signed-in user's live tunneld-registered workspaces."

[[bin]]
name = "workspace-proxy-service"
path = "src/main.rs"

[lib]
name = "workspace_proxy"
path = "src/lib.rs"

[dependencies]
chan-tunnel-server = { workspace = true }
gateway-common = { workspace = true }

anyhow = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
futures-util = { workspace = true }
http-body = { workspace = true }
http-body-util = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
# Workspace-gate HS256 verify (entry tokens from identity) and mint
# (session cookies). Shared envelope lives in gateway_common::workspace_gate.
jsonwebtoken = { workspace = true }
tokio-tungstenite = { workspace = true }
tokio-util = { workspace = true }
# reqwest is the transport for the profile-service client only; the
# upstream tunnel reverse-proxy uses hyper over yamux substreams.
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
subtle = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
chan-tunnel-client = { workspace = true }
chan-tunnel-proto = { workspace = true }
async-trait = { workspace = true }
h2 = { workspace = true }
http = { workspace = true }
serde_json = { workspace = true }
tower = { version = "0.5", features = ["util"] }

[package.metadata.deb]
name = "chan-gateway-workspace-proxy"
maintainer = "fiorix <fiorix@gmail.com>"
copyright = "2026, fiorix <fiorix@gmail.com>"
license-file = ["../../LICENSE", "0"]
extended-description = """\
Public-facing service for the chan-gateway suite. Apex
workspace.chan.app carries the tunnel registration endpoint plus the
admin tree; wildcard *.workspace.chan.app reverse-proxies tenant
content into registered chan-serve peers, gated by a host-only,
path-scoped JWT cookie minted by workspace-proxy on first entry. No
SPA in this binary; the dashboard lives at id.chan.app."""
section = "net"
priority = "optional"
depends = "$auto, adduser"
maintainer-scripts = "packaging/"
assets = [
    ["target/release/workspace-proxy-service", "/usr/bin/chan-gateway-workspace-proxy",  "755"],
    ["packaging/workspace-proxy.env",           "/etc/chan-gateway/workspace-proxy.env", "640"],
]
conf-files = ["/etc/chan-gateway/workspace-proxy.env"]

[package.metadata.deb.systemd-units]
unit-name = "chan-gateway-workspace-proxy"
unit-scripts = "packaging/"
enable = false
start = false
